# DSC

./: .gitignore  CMakeLists.txt  adapt_2.properties  cement.properties  cement.txt  cinema.properties  dental.properties  filber.properties  fuel_cell.txt  fuel_cells_smaller.properties  hamster.properties  hamster.txt  segment  square_arg.properties  square_round_2.txt  square_round_arg.properties  square_sin.properties
CGLA/: ArithSqMat4x4Float.cpp
DEMO/: InputParser.h  KDTree.h  anisotrpic_kernel.cpp  anisotrpic_kernel.h  bubble.h  cache.hpp  dam_break.h  dambreak2.h  dambreak_high_res.h  debugger.h  define.h  demo.cpp  draw.cpp  draw.h  draw_helper.cpp  draw_helper.h  eigen_wrapper.cpp  eigen_wrapper.hpp  file_load.cpp  file_load.hpp  fluid_motion.cpp  fluid_motion.hpp  glut_menu.cpp  glut_menu.h  glut_menu.hpp  image3d.cpp  image3d.h  normal_function.h  particle.h  particle_manager.cpp  particle_manager.hpp  probability_image.cpp  probability_image.hpp  problem.cpp  problem.h  segment_function.cpp  segment_function.h  tet_dis_coord.hpp  user_interface.cpp  user_interface.h  (+2 more)
DSC.xcodeproj/: project.pbxproj
DSC_cache.xcodeproj/: project.pbxproj
DSC_compare.xcodeproj/: project.pbxproj
DSC_parallel.xcodeproj/: project.pbxproj
DSC_segment.xcodeproj/: project.pbxproj
DSC_segment_probability.xcodeproj/: project.pbxproj
GEL/: Makefile  Makefile.bak
SCGenerator/: generator.cpp
SOIL/: SOIL.c
TetGen/: tetgen.cpp
data/: cube.dsc  cube_simple.dsc  mesh.dsc  out.dsc
fluidSimulation/: define_fluid.h  fluid_function.cpp  fluid_function.h
is_mesh/: is_mesh.h  (+9 more)
(+39 files in other folders)
